--- a/dev/templates/benefits.pug
+++ b/dev/templates/benefits.pug
@@ -28,20 +28,18 @@ block content
 						h3.block-title
 							| Summary Description of Benefits for the Personal Internet & Identity Coverage Master Policy
 						p.profile-benefits-content-text
-							| This Summary is provided to inform you that as a member of PrivacyMaxx you are entitled benefits under the Master
-							| Policy referenced below. This Summary Description of Benefits does not state all the terms, conditions, and exclusions
-							| of the Policy. Your benefits will be subject to all of the terms, conditions, and exclusions of the Master Policy,
-							| even if they are not mentioned in this Summary. A complete copy of the Policy will be provided upon request.
+							| This Summary is provided to inform you that as a member of PrivacyMaxx you are entitled benefits under the Master Policy referenced
+							| below. This Summary Description of Benefits does not state all the terms, conditions, and exclusions of the Policy. Your benefits will be
+							| subject to all of the terms, conditions, and exclusions of the Master Policy, even if they are not mentioned in this Summary. A complete copy
+							| of the Policy will be provided upon request.
 						p.profile-benefits-content-text
-							| The Master Policy of Personal Internet Identity Coverage has been issued to:
-							| Privacy Maxx, LLC.(the Master Policy Holder), Policy Number [7080220 and 29106852 respectively]
-							| underwritten by insurance company subsidiaries or affiliates of American International Group, Inc.,to
-							| provide benefits as described in this Summary.
+							| The Master Policy of Personal Internet Identity Coverage has been issued to: Privacy Maxx, LLC.(the Master Policy Holder), Policy Number
+							| [7080220 and 29106852 respectively] underwritten by insurance company subsidiaries or affiliates of American International Group, Inc.,to provide
+							| benefits as described in this Summary.
 						h3.block-title General Information
 						p.profile-benefits-content-text
-							| Should you have any questions regarding the Membership Program provided by the Master Policyholder,
-							| or wish to view a complete copy of the Master Policy,
-							| please call the customer service number located in your membership materials or at 1-800-854-6147.
+							| Should you have any questions regarding the Membership Program provided by the Master Policyholder, or wish to view a complete copy of
+							| the Master Policy, please call the customer service number located in your membership materials or at 1-800-854-6147.
 						h3.block-title Limit of Insurance
 						ul.profile-benefits-content-list
 							li #[strong Aggregate Limit of Insurance:] #[span  $25,000 or $1,000,000 per policy period]
@@ -51,4 +49,99 @@ block content
 							li #[strong Elder Care and Child Care:] #[span - $1,000 per policy period]
 							li #[strong Deductible:] #[span $0 per policy period (depending on your service plan level)]
 						h3.block-title Filing a Claim
+						p.profile-benefits-content-text
+							| If you have any questions regarding the identity theftinsurance coverage or wish to file a claim under the Master Policy,
+							| please contact the Insurer at 1-866-IDHelp2 (1-866-434-3572).
+						p.profile-benefits-content-text
+							| This is a group master policy issued to Privacy Maxx, LLC. If this master policy is terminated, your benefits will cease effective that date.
+							| It is the obligation of the master policyholder to inform you of any termination of the master policy.
+						h3.block-title BENEFITS
+						p.profile-benefits-content-text
+							| We shall pay you for the following:
+						p.profile-benefits-content-text
+							| a) Costs
+							br
+							| i. Reasonable and necessary costs incurred by you in the United States for re-filingapplications for loans, grants or other credit instruments
+							| that are rejected solely as a result of a stolen identity event;
+							br
+							| ii. Reasonable and necessary costs incurred by you in the United States for notarizing affidavits or other similar documents, long
+							| distance telephone calls and postage solely as a result of your efforts to report a stolen identity event and/or amend or rectify records as to
+							| your true name or identity as a result of a stolen identity event;
+							br
+							| iii. Reasonable and necessary costs incurred by youfor up to six credit reports from established credit bureaus (with no more than two reports
+							| from any one credit bureau) dated within 12 months after your knowledge or discovery of a stolen identity event;
+							br
+							| iv. costs approved by us, for providing periodic reports on changes to, and inquiries about the information contained in yourcredit reports or
+							| public databases (including, but not limited to credit monitoring services);
+							br
+							| v. cost of travel within the United States incurred as a result of yourefforts to amendor rectify records as to your true name and identity;
+							br
+							| vi. costs for elder care or child care incurred as a result of yourefforts to amend or rectify records as to yourtrue name or identity.
+						p.profile-benefits-content-text
+							| b) Lost Wages
+							br
+							| Actual lost wages earned in the United States, whether partial or whole days, for time reasonably and necessarily taken offwork and away from your work
+							| premises solely as a result of your efforts to amend or rectify records as to your true name or identity as a result of a stolen identity event. Actual lost
+							| wages includes remuneration for vacation days, discretionary days, floating holidays, and paid personal days excludes business interruption or future earnings
+							| of a self-employed professional. Computation of lost wages for self-employed persons must be supported by, and will be based on, prior year tax returns.
+							| Coverage is limited to wages lost within twelve months after your discovery of a stolen identity event.
+						p.profile-benefits-content-text
+							| c) Legal defense fees and expenses
+							br
+							| Reasonable and necessary fees and expenses incurred in the United States by you with our consent for an attorney approved by us for:
+							br
+							| i. An initial consultation with a lawyer to determine the severity of and appropriate response to a stolen identity event;
+							br
+							| ii. Defending any civil suit brought against you by a creditor or collection agency or entity acting on behalf of a creditor for non-payment of goods
+							| or services or default on a loan as a resultof a stolen identity event;
+							br
+							| iii. Removing any civil judgment wrongfully entered against you as a result of the stolen identity event;
+							br
+							| iv. Defending criminal charges brought against the insured as a result of a stolen identity event; provided, however, we will only pay criminal
+							| defense related fees and expenses after it has been established that the insured was not in fact the perpetrator.
+						p.profile-benefits-content-text
+							| A stolen identity event is the fraudulent use or your personal identification, social security number, or other method of
+							| identifying you, this includes the fraudulent use of the personal identity of the insured to establish credit accounts, secure loans, enter into
+							| contracts or commit crimes. A stolen identity event does not include the theft or unauthorized or illegal use of your business name, d/b/a or any
+							| other method of identifying your business activity.
+						h3.title Coverage Scope
+						h3.block-title Stolen Identity Event
+						p.profile-benefits-content-text
+							| The Master Policy provides benefits to you only if you report a stolen identity event to us by the contact number stated above
+							| as soon as you become aware of a stolen identity event, in no event later than 90 days after the stolen identity event is discovered by
+							| youand you follow the instructions given to you in a claims kits that you will be provided. These instructions will include notifying major credit
+							| bureaus, the Federal Trade Commission's Identity Theft Hotline and appropriate law enforcement authorities. This claims kit will also instruct you
+							| how to file for benefits under the policy if the stolen identity event results in losses covered under the policy.
+						p.profile-benefits-content-text
+							| You will only be covered if a stolen identity event is reported to us within 90 days of discovery. You will not be covered if the stolen identity
+							| event first occurs after termination of the master policy or termination of your membership in the Master Policyholder's program.
+						p.profile-benefits-content-text
+							| In addition, you must follow the instructions given to you in the claims kit that you will be provided. These instructions will include notifying
+							| major credit bureaus, the Federal Trade Commission's Identity Theft Hotline and appropriate law enforcement authorities. The claims kit will also
+							| instruct you how to file for benefits under the policy if the Stolen Identity Event results in losses covered under the Master Policy.
+						h3.block-title Limits Of Insurance
+						p.profile-benefits-content-text
+							| The most we shall pay you are the Limits of Insurance shown above. All Legal Costs shall be part of and subject to the Aggregate Limit of Insurance.
+							| LEGAL COSTS ARE PART OF, AND NOT IN ADDITION TO, THE LIMIT OF INSURANCE.
+						p.profile-benefits-content-text
+							| The Lost Wages, Travel Expense, Initial Legal Consultation and Elder Care/Child Care Limits of Insurance shown above are
+							| sublimits of the Aggregate Limit of Insuranceand the most we shall pay you for lost wages, travel expense, initial legal consultation and elder care/child care.
+						h3.block-title Deductible
+						p.profile-benefits-content-text
+							| 1. You shall be responsible for the applicable Deductible amount shown above and you may not insure against it.
+							br
+							| 2. You shall be responsible for only one Deductible during any one policy period.
+						h3.block-title Other Insurance
+						p.profile-benefits-content-text
+							| We shall be excess over any other insurance, including, without limitation, homeowner's or renter's insurance. If you have other insurance that applies
+							| to a loss under this policy, the other insurance shall pay first. This policy applies to the amount of loss that is in excess of the Limit of Insurance of
+							| your other insurance and the total of all your deductibles and self-insured amounts under all such other insurance. In no event shall we pay more than our
+							| Limits of Insurance as shown above.
+						h3.block-title DUPLICATE COVERAGES
+						p.profile-benefits-content-text
+							| Should you be enrolled in more than one membership program insured by us, or any of our affiliates, we will reimburse you under each membership program:
+						p.profile-benefits-content-text
+							| a) subject to the applicable deductibles and limits of liability of each insured membership program
+							br
+							| b) but in no event shall the total amount reimbursed to you under all membership programs exceed the actual amount of loss.
 	include footer-profile
