--- a/dev/templates/home-plan.pug
+++ b/dev/templates/home-plan.pug
@@ -195,6 +195,8 @@ block content
 									span Savings
 							a.wh-all(href='#')
 								| View All Items
+								svg
+									use(xlink:href='/img/sprite.svg#chevron_right')
 				.row.gray-bottom-row
 					.gray-block.gray-bottom-block
 						h6.gray-block-title Lost Wallet Service
