--- a/dev/templates/notifications.pug
+++ b/dev/templates/notifications.pug
@@ -55,5 +55,5 @@ block content
 								span.select-body-item
 									strong (123) 456 7891
 								button.select-body-item.-action(type='button')
-									| Change number
+									| Change phone number
 	include footer-profile
