--- a/dev/templates/report.pug
+++ b/dev/templates/report.pug
@@ -34,7 +34,7 @@ block content
 			button.popup-close(data-click="front:closeHalf" data-popup='#license')
 				svg
 					use(xlink:href='/img/sprite.svg#close')
-			.change-method.member-popup.driver
+			.change-method.member-popup.driver.report-scroll-container
 				h5.title-popup.block-title 10410 W PRAIRIE HILLS CIR, SUN CITY, AZ 85351 1821
 				br
 				h4.block-title
