--- a/dev/templates/reset.pug
+++ b/dev/templates/reset.pug
@@ -11,7 +11,7 @@ block content
 					form.login-form
 						h1.title Setup New Password
 						h2.subtitle.-resetlink
-							span Have you already reset the password?
+							span Have you already reset the password?&nbsp;
 							a.link(href='/login.html') Sign In
 						label.inpt.-full
 							input(type='password' placeholder='Password' id="pwd")
