--- a/dev/templates/vault-auto.pug
+++ b/dev/templates/vault-auto.pug
@@ -34,7 +34,7 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-									.vault-accorderon-item_body
+									.vault-accordeon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
@@ -44,8 +44,8 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-									.vault-accorderon-item_body
-								.vault-accordeon-item
+									.vault-accordeon-item_body
+								.vault-accordeon-item.-show
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
 											svg
