--- a/dev/templates/vault.pug
+++ b/dev/templates/vault.pug
@@ -34,7 +34,7 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-									.vault-accorderon-item_body
+									.vault-accordeon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
@@ -44,7 +44,7 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-									.vault-accorderon-item_body
+									.vault-accordeon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
@@ -54,7 +54,7 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-									.vault-accorderon-item_body
+									.vault-accordeon-item_body
 								.vault-accordeon-item
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
@@ -64,7 +64,7 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-									.vault-accorderon-item_body
+									.vault-accordeon-item_body
 								.vault-accordeon-item.-show
 									.vault-accordeon-item_head.row
 										.vault-accordeon-item_img
@@ -74,9 +74,15 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-									.vault-accorderon-item_body
+									.vault-accordeon-item_body
 										.vault-accordeon-item_input
 											input(type='text' value='(123) 456-7891')
+											.vault-accordeon-item_action
+												button
+													svg
+														use(xlink:href='/img/sprite.svg#more_vert')
+										.vault-accordeon-item_input
+											input(type='text' value='(444) 311-4242')
 											.vault-accordeon-item_action
 												button
 													svg
@@ -103,8 +109,7 @@ block content
 										button.vault-accordeon-item_arr
 											svg
 												use(xlink:href='/img/sprite.svg#chevron_right')
-
-
+									.vault-accordeon-item_body
 					.vault-right
 						h3.subtitle What is the Identimaxx vault?
 						.vault-img
