--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -90,11 +90,18 @@ body
 		align-items: center
 		color RGB($pdark_blue)
 		font 500 16px/19.2px Barlow
+		transition .35s ease
+		&:hover
+			border-color RGB($plight_blue)
+			color RGB($plight_blue)
+			svg use
+				fill RGB($plight_blue)
 		svg
 			wh 24px
 			margin-right: 12px
 		svg use
 			fill RGB($pdark_blue)
+			transition .35s ease
 	&.-blue
 		color RGB($pdark_blue)
 		text-decoration: underline
@@ -131,7 +138,7 @@ body
 		border-radius 8px
 		color RGBA($pdark_gray)
 		svg
-			wh(12px)
+			wh(24px)
 			transform rotate(90deg)
 			use
 				fill RGBA($pdark_gray)
@@ -151,6 +158,7 @@ body
 			top 100%
 			opacity 1
 			visibility visible
+			margin-top: 8px
 		&-item
 			w 100%
 			text-align: left
