--- a/dev/templates/title-monitoring.pug
+++ b/dev/templates/title-monitoring.pug
@@ -25,7 +25,7 @@ block content
 								table.table
 									thead
 										tr
-											th First Name
+											th Name
 											th Address
 											th.table-actions
 												| Remove
@@ -179,9 +179,7 @@ block content
 		.member-popup#stop-monitoring
 			h5.title-popup.block-title Stop Monitoring this?
 			p.text.member-text
-				| Would you like to remove this individual/
-				br
-				| property from our monitoring list?
+				| Would you like to remove this individual/property from our monitoring list?
 			.member-buttons
 				button.btn.-blue Stop Monitoring
 				button.btn Keep Monitoring
