fix to header with user change options

--- a/dev/templates/template/header-l.pug
+++ b/dev/templates/template/header-l.pug
@@ -175,3 +175,10 @@ header.head
 							svg
 								use(xlink:href='/img/sprite.svg#add')
 							span Add Family Member
+				ul.users-list
+					li.users-item
+						button.users-item_btn.active John Doe
+					li.users-item
+						button.users-item_btn Richard Doe
+					li.users-item
+						button.users-item_btn Myriam Anne Richardson
