change table button, add anchors to benefits page

--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -622,6 +622,7 @@ body
 		&-content
 			w 100%
 			margin-top 71px
+			scroll-behavior smooth
 			+desktop()
 				height calc(100vh - 386px)
 				margin-top 24px
