--- a/dev/templates/benefits.pug
+++ b/dev/templates/benefits.pug
@@ -14,18 +14,18 @@ block content
 							| As a member of Identimaxx you are entitled benefits under the Master Policy referenced below.
 							| This Summary Description of Benefits does not state all the terms, conditions, and exclusions of the Policy.
 						.profile-benefits-links
-							a(href='#').profile-benefits-link Summary
-							a(href='#').profile-benefits-link General Information
-							a(href='#').profile-benefits-link Limit of Insurance
-							a(href='#').profile-benefits-link Filling a Claim
-							a(href='#').profile-benefits-link Benefits
-							a(href='#').profile-benefits-link Stolen Identity Event
-							a(href='#').profile-benefits-link Limits of Insurance
-							a(href='#').profile-benefits-link Deductible
-							a(href='#').profile-benefits-link Other Insurance
-							a(href='#').profile-benefits-link Duplicate Coraverages
+							a(href='#summary').profile-benefits-link Summary
+							a(href='#general').profile-benefits-link General Information
+							a(href='#limit').profile-benefits-link Limit of Insurance
+							a(href='#filling').profile-benefits-link Filling a Claim
+							a(href='#benefits').profile-benefits-link Benefits
+							a(href='#stolen').profile-benefits-link Stolen Identity Event
+							a(href='#limits_insurance').profile-benefits-link Limits of Insurance
+							a(href='#deductible').profile-benefits-link Deductible
+							a(href='#other').profile-benefits-link Other Insurance
+							a(href='#duplicate').profile-benefits-link Duplicate Coraverages
 					.profile-benefits-content
-						h3.block-title
+						h3.block-title#summary
 							| Summary Description of Benefits for the Personal Internet & Identity Coverage Master Policy
 						p.profile-benefits-content-text
 							| This Summary is provided to inform you that as a member of PrivacyMaxx you are entitled benefits under the Master Policy referenced
@@ -36,11 +36,11 @@ block content
 							| The Master Policy of Personal Internet Identity Coverage has been issued to: Privacy Maxx, LLC.(the Master Policy Holder), Policy Number
 							| [7080220 and 29106852 respectively] underwritten by insurance company subsidiaries or affiliates of American International Group, Inc.,to provide
 							| benefits as described in this Summary.
-						h3.block-title General Information
+						h3.block-title#general General Information
 						p.profile-benefits-content-text
 							| Should you have any questions regarding the Membership Program provided by the Master Policyholder, or wish to view a complete copy of
 							| the Master Policy, please call the customer service number located in your membership materials or at 1-800-854-6147.
-						h3.block-title Limit of Insurance
+						h3.block-title#limit Limit of Insurance
 						ul.profile-benefits-content-list
 							li #[strong Aggregate Limit of Insurance:] #[span  $25,000 or $1,000,000 per policy period]
 							li #[strong Lost Wages:] #[span $1,500 per week, for 5 weeks maximum]
@@ -48,14 +48,14 @@ block content
 							li #[strong Travel Expenses:] #[span $2,000 per policy period]
 							li #[strong Elder Care and Child Care:] #[span - $1,000 per policy period]
 							li #[strong Deductible:] #[span $0 per policy period (depending on your service plan level)]
-						h3.block-title Filing a Claim
+						h3.block-title#filling Filing a Claim
 						p.profile-benefits-content-text
 							| If you have any questions regarding the identity theftinsurance coverage or wish to file a claim under the Master Policy,
 							| please contact the Insurer at 1-866-IDHelp2 (1-866-434-3572).
 						p.profile-benefits-content-text
 							| This is a group master policy issued to Privacy Maxx, LLC. If this master policy is terminated, your benefits will cease effective that date.
 							| It is the obligation of the master policyholder to inform you of any termination of the master policy.
-						h3.block-title BENEFITS
+						h3.block-title#benefits BENEFITS
 						p.profile-benefits-content-text
 							| We shall pay you for the following:
 						p.profile-benefits-content-text
@@ -105,7 +105,7 @@ block content
 							| contracts or commit crimes. A stolen identity event does not include the theft or unauthorized or illegal use of your business name, d/b/a or any
 							| other method of identifying your business activity.
 						h3.title Coverage Scope
-						h3.block-title Stolen Identity Event
+						h3.block-title#stolen Stolen Identity Event
 						p.profile-benefits-content-text
 							| The Master Policy provides benefits to you only if you report a stolen identity event to us by the contact number stated above
 							| as soon as you become aware of a stolen identity event, in no event later than 90 days after the stolen identity event is discovered by
@@ -119,25 +119,25 @@ block content
 							| In addition, you must follow the instructions given to you in the claims kit that you will be provided. These instructions will include notifying
 							| major credit bureaus, the Federal Trade Commission's Identity Theft Hotline and appropriate law enforcement authorities. The claims kit will also
 							| instruct you how to file for benefits under the policy if the Stolen Identity Event results in losses covered under the Master Policy.
-						h3.block-title Limits Of Insurance
+						h3.block-title#limits_insurance Limits Of Insurance
 						p.profile-benefits-content-text
 							| The most we shall pay you are the Limits of Insurance shown above. All Legal Costs shall be part of and subject to the Aggregate Limit of Insurance.
 							| LEGAL COSTS ARE PART OF, AND NOT IN ADDITION TO, THE LIMIT OF INSURANCE.
 						p.profile-benefits-content-text
 							| The Lost Wages, Travel Expense, Initial Legal Consultation and Elder Care/Child Care Limits of Insurance shown above are
 							| sublimits of the Aggregate Limit of Insuranceand the most we shall pay you for lost wages, travel expense, initial legal consultation and elder care/child care.
-						h3.block-title Deductible
+						h3.block-title#deductible Deductible
 						p.profile-benefits-content-text
 							| 1. You shall be responsible for the applicable Deductible amount shown above and you may not insure against it.
 							br
 							| 2. You shall be responsible for only one Deductible during any one policy period.
-						h3.block-title Other Insurance
+						h3.block-title#other Other Insurance
 						p.profile-benefits-content-text
 							| We shall be excess over any other insurance, including, without limitation, homeowner's or renter's insurance. If you have other insurance that applies
 							| to a loss under this policy, the other insurance shall pay first. This policy applies to the amount of loss that is in excess of the Limit of Insurance of
 							| your other insurance and the total of all your deductibles and self-insured amounts under all such other insurance. In no event shall we pay more than our
 							| Limits of Insurance as shown above.
-						h3.block-title DUPLICATE COVERAGES
+						h3.block-title#duplicate DUPLICATE COVERAGES
 						p.profile-benefits-content-text
 							| Should you be enrolled in more than one membership program insured by us, or any of our affiliates, we will reimburse you under each membership program:
 						p.profile-benefits-content-text
