--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -68,7 +68,7 @@ header.head
 								//	button.btn.-blue
 								//		span Sign In
 				.head-actions-menu
-					a(href='#').head-actions-link Support
+					a(href='#').head-actions-link.head-menu_item Support
 					.head-actions-link.head-menu_item.-dropdown
 						a(href='#') John Doe
 						span
