--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -48,11 +48,11 @@ body
 				display block
 				margin 0 auto
 		&_item
+			height 40px
 			padding 8px 0
 			transition .35s ease
 			+desktop()
 				padding 11px 16px
-				max-height 40px
 			a
 				color RGB($pdark_blue)
 			&.-dropdown
@@ -221,9 +221,11 @@ body
 			&.-show
 				visibility visible
 			&_item
-				padding 10px 8px
+				padding 8px
 				margin-bottom 24px
 				font 500 16px/19.2px Barlow
+				&:hover
+					padding 8px
 		&-sublist
 			display none
 			margin-top -16px
@@ -234,10 +236,11 @@ body
 				ali: center
 			})
 			border-radius 8px
-			padding 10px 8px 11px
+			padding 8px 16px
 			column-gap: 8px
-			padding-left: 16px
 			margin-bottom: 8px
+			&:hover
+				background-color: RGB($plight_blue,.2)
 			&:active
 				border-radius 8px
 				background-color RGBA($plight_blue,.2)
